# pysentry-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pysentry_pre_commit/: __init__.py
