[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysentry-pre-commit"
version = "0.3.6"
description = "Pre-commit hooks for PySentry security scanner"
readme = "README.md"
authors = [
    {name = "Nikita Iudenkov", email = "nikita@pysentry.com"}
]
requires-python = ">=3.8"
